--- a/starbucksapp.html
+++ b/starbucksapp.html
@@ -47,17 +47,12 @@
 <section id="work">
     <body>
     <img src='images/starbucks1-min.png' width='1280px',height='500px'><br>
-    <img src='images/starbucks2-min.png' width='1280px',height='500px'><br>
-    <img src='images/S3-min.png' width='1280px',height='500px'><br>
-    <img src='images/S4-min.png' width='1280px',height='500px'><br>
-    <img src='images/S5-min.png' width='1280px',height='500px'><br>
-    <img src='images/S6-min.png' width='1280px',height='500px'><br>
-    <img src='images/S7-min-2.png' width='1280px',height='500px'><br>
-    <img src='images/S8-min.png' width='1280px',height='500px'><br>
-    <img src='images/S9-min.png' width='1280px',height='500px'><br>
-    <img src='images/S10-min.png' width='1280px',height='500px'><br>
-    <img src='images/S12-min.png' width='1280px',height='500px'><br>
-    <img src='images/S14-min.png' width='1280px',height='500px'><br>
-    <img src='images/S13-min.png' width='1280px',height='500px'>
+    <img src='X2-min.png' width='1280px',height='500px'><br>
+    <img src='X3-min.png' width='1280px',height='500px'><br>
+    <img src='X4-min.png' width='1280px',height='500px'><br>
+    <img src='X5-min.png' width='1280px',height='500px'><br>
+    <img src='X6-min.png' width='1280px',height='500px'><br>
+    <img src='X7-min.png' width='1280px',height='500px'>
+
     </body>
 </section>
