--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@
                               <img src="images/MacBook Pro - 30 copy.png" class="img-responsive" alt="Work">
                          </a>
                     </div>
-                    <h4>Starbucks Mobiel App</h4>
+                    <h4>Starbucks Mobile App</h4>
                     <p>Optimize the Loyalty Program Details Page</p>
                </div>
 
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.6s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/MacBook Pro - 29 copy.png" class="image-popup">
+                         <a href="outlookapp.html">
                               <img src="images/MacBook Pro - 29 copy.png" class="img-responsive" alt="Work">
                          </a>
                     </div>
-                    <h4>Outlook Mobiel App</h4>
+                    <h4>Outlook Mobile App</h4>
                     <p>Add Sorting Options</p>
                </div>
 
@@ -118,7 +118,7 @@
                              <img src="images/MacBook Pro - 31 copy.png" class="img-responsive" alt="Work">
                          </a>
                     </div>
-                    <h4>Live Class App</h4>
+                    <h4>Live Class Mobile App</h4>
                     <p>Improve Students Engagement in a Mass Lecture </p>
                     <h6>In Progress</h6>
                </div>
