--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     </div>
                     <h4>Starbucks Mobile App</h4>
                     <p>Optimize the Loyalty Program Details Page</p>
+                    <h6>Client Project</h6>
                </div>
 
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.6s">
@@ -109,6 +110,7 @@
                     </div>
                     <h4>Outlook Mobile App</h4>
                     <p>Add Sorting Options</p>
+                    <h6>Personal Project</h6>
                </div>
 
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.8s">
