--- a/outlookapp.html
+++ b/outlookapp.html
@@ -18,7 +18,8 @@
 <link rel="stylesheet" href="css/font-awesome.min.css">
 
 <link rel="stylesheet" href="outlook.css">
-
+</head>
+<body>
 <!-- NAVIGATION SECTION -->
 <div class="navbar custom-navbar navbar-fixed-top" role="navigation">
     <div class="container">
@@ -44,20 +45,22 @@
 </div>
 
 <section id="cover">
-    <img src='O1-min.png' width='1280px',height='500px'><br>
+    <img src='O1-min.png' width='1280px',height='500px' class='img-responsive'>
 </section>
 
 <section id="work">
-        <img src='O2-min.png' width='1000px',height='500px'><br>
-        <img src='O3-min.png' width='1000px',height='500px'><br>
-        <img src='O4-min.png' width='1000px',height='500px'><br>
+        <img src='O2-min.png' width='1000px',height='500px'class='img-responsive'>
+        <img src='O3-min.png' width='1000px',height='500px'class='img-responsive'>
+        <img src='O4-min.png' width='1000px',height='500px'class='img-responsive'>
 </section>
 
 <section id="container">
-        <img src='O5-min.png' width='1000px',height='500px'><br>
+        <img src='O5-min.png' width='1000px',height='500px'class='img-responsive'>
 </section>
 <section id="work2">
-        <img src='O6-min.png' width='1000px',height='500px'><br>
-        <img src='O7-min.png' width='1000px',height='500px'><br>
-        <img src='O8-min.png' width='1000px',height='500px'>
+        <img src='O6-min.png' width='1000px',height='500px'class='img-responsive'>
+        <img src='O7-min.png' width='1000px',height='500px'class='img-responsive'>
+        <img src='O8-min.png' width='1000px',height='500px'class='img-responsive'>
 </section>
+</body>
+</html>
