--- a/outlookapp.html
+++ b/outlookapp.html
@@ -45,22 +45,22 @@
 </div>
 
 <section id="cover">
-    <img src='O1-min.png' width='1280px',height='500px' class='img-responsive'>
+    <img src='O1-min.png' width='100%',height='auto' class='img-responsive'>
 </section>
 
 <section id="work">
-        <img src='O2-min.png' width='1000px',height='500px'class='img-responsive'>
-        <img src='O3-min.png' width='1000px',height='500px'class='img-responsive'>
-        <img src='O4-min.png' width='1000px',height='500px'class='img-responsive'>
+        <img src='O2-min.png' width='100%',height='auto'class='img-responsive'>
+        <img src='O3-min.png' width='100%',height='auto'class='img-responsive'>
+        <img src='O4-min.png' width='100%',height='auto'class='img-responsive'>
 </section>
 
 <section id="container">
-        <img src='O5-min.png' width='1000px',height='500px'class='img-responsive'>
+        <img src='O5-min.png' width='100%',height='auto'class='img-responsive'>
 </section>
 <section id="work2">
-        <img src='O6-min.png' width='1000px',height='500px'class='img-responsive'>
-        <img src='O7-min.png' width='1000px',height='500px'class='img-responsive'>
-        <img src='O8-min.png' width='1000px',height='500px'class='img-responsive'>
+        <img src='O6-min.png' width='100%',height='auto'class='img-responsive'>
+        <img src='O7-min.png' width='100%',height='auto'class='img-responsive'>
+        <img src='O8-min.png' width='100%',height='auto'class='img-responsive'>
 </section>
 </body>
 </html>
