--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
      <div class="container">
 
           <div class="navbar-header">
-               <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
+               <button class="navbar-toggle"  data-target=".navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                         <li><a class="smoothScroll" href="#work">Work</a></li>
+                         <!--<li><a class="smoothScroll" href="#about">resume</a></li>-->
+                    </ul>
                </button>
                <!-- lOGO TEXT HERE -->
                <a href="index.html" class="navbar-brand">Jiayu Fu</a>
