--- a/starbucksapp.html
+++ b/starbucksapp.html
@@ -22,27 +22,24 @@
 <!-- NAVIGATION SECTION -->
 
 <div class="navbar custom-navbar navbar-fixed-top" role="navigation">
-    <div class="container">
+     <div class="container">
+          <button class="navbar-toggle"  data-target=".navbar-collapse">
+               <ul class="nav navbar-nav navbar-right">
+                    <li><a class="smoothScroll" href="index.html">Work</a></li>
+               </ul>
+          </button>
+ 
+          <div class="collapse navbar-collapse">
+               <ul class="nav navbar-nav navbar-right">
+                    <li><a class="smoothScroll" href="index.html">Work</a></li>
+                    <!--<li><a class="smoothScroll" href="#about">resume</a></li>-->
+               </ul>
+          </div>
+ 
+     </div>
+ </div>
+ 
 
-         <div class="navbar-header">
-              <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                   <span class="icon icon-bar"></span>
-                   <span class="icon icon-bar"></span>
-                   <span class="icon icon-bar"></span>
-              </button>
-              <!-- lOGO TEXT HERE -->
-              <a href="index.html" class="navbar-brand"></a>
-         </div>
-
-         <div class="collapse navbar-collapse">
-              <ul class="nav navbar-nav navbar-right">
-                   <li><a class="smoothScroll" href="index.html">Work</a></li>
-                   <!--<li><a class="smoothScroll" href="#about">resume</a></li>-->
-              </ul>
-         </div>
-
-    </div>
-</div>
 
 <section id="work">
     <body>
