--- a/starbucksapp.html
+++ b/starbucksapp.html
@@ -46,8 +46,9 @@
     <img src='images/starbucks1-min.png' width='1280px',height='500px' class= 'img-responsive'>
     <img src='X2-min.png' width='1280px',height='500px'class= 'img-responsive'>
     <img src='X3-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='X4-min.png' width='1280px',height='500px'class= 'img-responsive'>
+    <img src='S20-min.png' width='1280px',height='500px'class= 'img-responsive'>
     <img src='X5-min.png' width='1280px',height='500px'class= 'img-responsive'>
+    <img src='X8-min.png' width='1280px',height='500px'class= 'img-responsive'>
     <img src='X6-min.png' width='1280px',height='500px'class= 'img-responsive'>
     <img src='X7-min.png' width='1280px',height='500px'class= 'img-responsive'>
 
