--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                </div>
 
                <div class="col-md-8 col-sm-8">
-                    <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hi,My name is Jiayu Fu and I'm an UX designer who enjoys simple design</h1>
+                    <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello,I'm Jiayu Fu, an UX designer.  </h1>
                     <a href="JiayuFu resume2.pdf" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume</a>
                </div>
 
