--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
      <div class="container">
           <div class="row">
                <div class="col-md-offset-1 col-md-2 col-sm-3">
-                    <img src="images/Mask Group.png" class="wow fadeInUp img-responsive img-circle" data-wow-delay="0.2s" alt="about image">
+                    <img src="732eaa6e-2db0-48dc-b8d8-4484ec74e70f-449442b3-faef-4bd1-9802-9cee99941b9a-v1.png" class="wow fadeInUp img-responsive " data-wow-delay="0.2s" alt="about image">
                </div>
 
                <div class="col-md-8 col-sm-8">
-                    <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello,I'm Jiayu Fu, an UX designer.  </h1>
+                    <h1 class="wow fadeInUp" data-wow-delay="0.6s">I'm Jiayu Fu, an UX designer.  </h1>
                     <a href="JiayuFu resume2.pdf" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume</a>
                </div>
 
