--- a/starbucksapp.html
+++ b/starbucksapp.html
@@ -43,16 +43,16 @@
 
 <section id="work">
     <body>
-    <img src='images/starbucks1-min.png' width='1280px',height='500px' class= 'img-responsive'>
-    <img src='X2-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='X3-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='X4-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='X5-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='X6-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='1X-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='2X-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='6X-min.png' width='1280px',height='500px'class= 'img-responsive'>
-    <img src='X7-min.png' width='1280px',height='500px'class= 'img-responsive'>
+    <img src='starbucks1-min.png' width='100%',height='auto' class= 'img-responsive'>
+    <img src='星2-min.png' width='100%',height='auto'class= 'img-responsive'>
+    <img src='星3-min.png' width='100%',height='auto'class= 'img-responsive'>
+    <img src='星4-min.png' width='100%',height='auto'class= 'img-responsive'>
+    <img src='星5-min.png' width='100%',height='auto'class= 'img-responsive'>
+    <img src='星6-min.png' width='100%',height='auto'class= 'img-responsive'>
+    <img src='星7-min.png' width='100%',height='auto'class= 'img-responsive'>
+    <img src='星8-min.png' width='100%',height='auto'class= 'img-responsive'>
+    <img src='星9-min.png' width='100%',height='auto'class= 'img-responsive'>
+    <img src='X7-min.png' width='100%',height='auto'class= 'img-responsive'>
 
     </body>
 </section>
