--- a/outlookapp.html
+++ b/outlookapp.html
@@ -40,22 +40,21 @@
 </div>
 
 <section id="cover">
-    <img src='O1-min.png' width='100%',height='auto' class='img-responsive'>
+    <img src='images/Outlook 中文1-min.png' width='100%',height='auto' class='img-responsive'>
 </section>
 
 <section id="work">
-        <img src='O2-min.png' width='100%',height='auto'class='img-responsive'>
-        <img src='O3-min.png' width='100%',height='auto'class='img-responsive'>
-        <img src='O4-min.png' width='100%',height='auto'class='img-responsive'>
+        <img src='images/Outlook 11-min.png' width='100%',height='auto'class='img-responsive'>
+        <img src='images/Outlook3-min-2.png' width='100%',height='auto'class='img-responsive'>
+        <img src='images/Outlook4-min-2.png' width='100%',height='auto'class='img-responsive'>
 </section>
 
 <section id="container">
-        <img src='O5-min.png' width='100%',height='auto'class='img-responsive'>
+        <img src='images/Outlook5-min-2.png' width='100%',height='auto'class='img-responsive'>
 </section>
 <section id="work2">
-        <img src='O6-min.png' width='100%',height='auto'class='img-responsive'>
-        <img src='O7-min.png' width='100%',height='auto'class='img-responsive'>
-        <img src='O8-min.png' width='100%',height='auto'class='img-responsive'>
+        <img src='images/Outlook6-min-2.png' width='100%',height='auto'class='img-responsive'>
+
 </section>
 </body>
 </html>
